welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:9: error: type mismatch;
 found   : Unit
 required: Boolean
     if(n<90){
     ^